Fix, when case of multiple non-default public constructors use the largest constructor